Fix: Affichage des 4 numÃ©ros de tÃ©lÃ©phone dans tous les documents gÃ©nÃ©rÃ©s
- Ajout mÃ©thode get_telephones_formates() dans ConfigurationEntreprise
- Mise Ã  jour templates kbis (footer, header, PDF) pour afficher telephone_2, telephone_3, telephone_4
- Mise Ã  jour contrats/services.py pour utiliser tous les tÃ©lÃ©phones dans les PDFs
- Mise Ã  jour quittance_detail.html pour afficher les 4 tÃ©lÃ©phones

--- a/templates/includes/kbis_footer.html
+++ b/templates/includes/kbis_footer.html
@@ -21,13 +21,17 @@
                     <div class="kbis-footer-phones">
                         <i class="bi bi-telephone"></i>
                         <span class="kbis-phone-primary">{{ config_entreprise.telephone }}</span>
-                        {% if config_entreprise.telephone_secondaire %}
+                        {% if config_entreprise.telephone_2 %}
                         <span class="kbis-phone-separator">/</span>
-                        <span class="kbis-phone-secondary">{{ config_entreprise.telephone_secondaire }}</span>
+                        <span class="kbis-phone-secondary">{{ config_entreprise.telephone_2 }}</span>
                         {% endif %}
-                        {% if config_entreprise.telephone_mobile %}
+                        {% if config_entreprise.telephone_3 %}
                         <span class="kbis-phone-separator">/</span>
-                        <span class="kbis-phone-mobile">{{ config_entreprise.telephone_mobile }}</span>
+                        <span class="kbis-phone-mobile">{{ config_entreprise.telephone_3 }}</span>
+                        {% endif %}
+                        {% if config_entreprise.telephone_4 %}
+                        <span class="kbis-phone-separator">/</span>
+                        <span class="kbis-phone-mobile">{{ config_entreprise.telephone_4 }}</span>
                         {% endif %}
                     </div>
                     
@@ -36,9 +40,6 @@
                     <div class="kbis-footer-address-secondary">
                         <i class="bi bi-geo-alt-fill"></i>
                         <span>{{ config_entreprise.adresse_secondaire }}</span>
-                        {% if config_entreprise.telephone_secondaire %}
-                        <span class="kbis-phone-inline">: {{ config_entreprise.telephone_secondaire }}</span>
-                        {% endif %}
                     </div>
                     {% endif %}
                     
