--- a/templates/paiements/quittance_detail.html
+++ b/templates/paiements/quittance_detail.html
@@ -1051,6 +1051,8 @@ document.addEventListener('DOMContentLoaded', function() {
                                         {{ config_entreprise.ville }}<br>
                                         {% if config_entreprise.telephone %}{{ config_entreprise.telephone }}{% endif %}
                                         {% if config_entreprise.telephone_2 %} / {{ config_entreprise.telephone_2 }}{% endif %}
+                                        {% if config_entreprise.telephone_3 %} / {{ config_entreprise.telephone_3 }}{% endif %}
+                                        {% if config_entreprise.telephone_4 %} / {{ config_entreprise.telephone_4 }}{% endif %}
                                     </div>
                                 </div>
                             </div>
