--- a/templates/includes/kbis_pdf_footer.html
+++ b/templates/includes/kbis_pdf_footer.html
@@ -16,25 +16,15 @@
         <!-- Téléphones multiples -->
         <div class="kbis-pdf-phones">
             Tél: {{ config_entreprise.telephone }}
-            {% if config_entreprise.telephone_secondaire %} / {{ config_entreprise.telephone_secondaire }}{% endif %}
-            {% if config_entreprise.telephone_mobile %} / {{ config_entreprise.telephone_mobile }}{% endif %}
+            {% if config_entreprise.telephone_2 %} / {{ config_entreprise.telephone_2 }}{% endif %}
+            {% if config_entreprise.telephone_3 %} / {{ config_entreprise.telephone_3 }}{% endif %}
+            {% if config_entreprise.telephone_4 %} / {{ config_entreprise.telephone_4 }}{% endif %}
         </div>
-        
-        <!-- Téléphones supplémentaires sur nouvelle ligne -->
-        {% if config_entreprise.telephone_tertiaire %}
-        <div class="kbis-pdf-phones-secondary">
-            {{ config_entreprise.telephone_tertiaire }}
-            {% if config_entreprise.telephone_quaternaire %} / {{ config_entreprise.telephone_quaternaire }}{% endif %}
-        </div>
-        {% endif %}
         
         <!-- Adresse secondaire si disponible -->
         {% if config_entreprise.adresse_secondaire %}
         <div class="kbis-pdf-address-secondary">
             {{ config_entreprise.adresse_secondaire }}
-            {% if config_entreprise.telephone_secondaire %}
-            : {{ config_entreprise.telephone_secondaire }}
-            {% endif %}
         </div>
         {% endif %}
         
